@@ -97,7 +97,13 @@
     <xs:element name="ADSdesignator" type="xs:string" minOccurs="0" />
 
     <!-- For all the things we forget to identify -->
-    <xs:element name="Comments" type="xs:string" minOccurs="0" />
+    <xs:element name="Comments" minOccurs="0">
+      <xs:complexType>
+        <xs:sequence>
+          <xs:element name="Comment" type="xs:string" maxOccurs="unbounded"/>
+        </xs:sequence>
+      </xs:complexType>
+    </xs:element>
 
   </xs:all>
 </xs:complexType>
